--- a/cadastro_procedimento.html
+++ b/cadastro_procedimento.html
@@ -41,6 +41,7 @@
                     <tr>
                         <th>Procedimento</th>
                         <th>Preço</th>
+                        <th>Ações</th>
                     </tr>
                 </thead>
                 <tbody id="procedimentosTbody"></tbody>
@@ -57,33 +58,71 @@
 
 <script>
     document.getElementById('procedimentoForm').addEventListener('submit', function (event) {
-        event.preventDefault();
-        const procedimento = {
-            nome: document.getElementById('procedimento').value,
-            preco: document.getElementById('preco').value
-        };
-        let procedimentos = JSON.parse(localStorage.getItem('procedimentos')) || [];
-        procedimentos.push(procedimento);
-        localStorage.setItem('procedimentos', JSON.stringify(procedimentos));
-        alert('Procedimento cadastrado com sucesso!');
-        document.getElementById('procedimentoForm').reset();
-        listarProcedimentos();
+    event.preventDefault();
+    const procedimento = {
+        nome: document.getElementById('procedimento').value,
+        preco: document.getElementById('preco').value
+    };
+    let procedimentos = JSON.parse(localStorage.getItem('procedimentos')) || [];
+    procedimentos.push(procedimento);
+    localStorage.setItem('procedimentos', JSON.stringify(procedimentos));
+    alert('Procedimento cadastrado com sucesso!');
+    document.getElementById('procedimentoForm').reset();
+    listarProcedimentos();
     });
 
     function listarProcedimentos() {
         const procedimentos = JSON.parse(localStorage.getItem('procedimentos')) || [];
         const tbody = document.getElementById('procedimentosTbody');
         tbody.innerHTML = '';
-        procedimentos.forEach(procedimento => {
+        procedimentos.forEach((procedimento, index) => {
             const tr = document.createElement('tr');
             const tdNome = document.createElement('td');
             tdNome.textContent = procedimento.nome;
             const tdPreco = document.createElement('td');
             tdPreco.textContent = `R$${procedimento.preco}`;
+            const tdAcoes = document.createElement('td');
+
+            const btnEditar = document.createElement('button');
+            btnEditar.textContent = 'Editar';
+            btnEditar.classList.add('editar-btn');
+            btnEditar.onclick = () => editarProcedimento(index);
+
+            const btnRemover = document.createElement('button');
+            btnRemover.textContent = 'Remover';
+            btnRemover.classList.add('remover-btn');
+            btnRemover.onclick = () => removerProcedimento(index);
+
+            tdAcoes.appendChild(btnEditar);
+            tdAcoes.appendChild(btnRemover);
+
             tr.appendChild(tdNome);
             tr.appendChild(tdPreco);
+            tr.appendChild(tdAcoes);
             tbody.appendChild(tr);
         });
+    }
+
+    function editarProcedimento(index) {
+        let procedimentos = JSON.parse(localStorage.getItem('procedimentos')) || [];
+        const procedimento = procedimentos[index];
+
+        document.getElementById('procedimento').value = procedimento.nome;
+        document.getElementById('preco').value = procedimento.preco;
+
+        // Remover o procedimento da lista temporariamente
+        procedimentos.splice(index, 1);
+        localStorage.setItem('procedimentos', JSON.stringify(procedimentos));
+
+        // Atualizar a lista na interface
+        listarProcedimentos();
+    }
+
+    function removerProcedimento(index) {
+        let procedimentos = JSON.parse(localStorage.getItem('procedimentos')) || [];
+        procedimentos.splice(index, 1);
+        localStorage.setItem('procedimentos', JSON.stringify(procedimentos));
+        listarProcedimentos();
     }
 
     // Carregar a lista de procedimentos ao carregar a página
