--- a/visualizar_agenda.html
+++ b/visualizar_agenda.html
@@ -68,7 +68,7 @@
                     <td>${agendamento.deficiencia ? 'Sim' : 'Não'}</td>
                     <td>
                         <button class="confirmar-btn" data-index="${index}">Confirmar WhatsApp</button>
-                        <button class="excluir-btn" data-index="${index}">Excluir</button>
+                        <button class="excluir-btn" data-index="${index}">Remover</button>
                     </td>
                 `;
                 tabela.appendChild(row);
