--- a/cadastro_procedimento.html
+++ b/cadastro_procedimento.html
@@ -58,17 +58,17 @@
 
 <script>
     document.getElementById('procedimentoForm').addEventListener('submit', function (event) {
-    event.preventDefault();
-    const procedimento = {
-        nome: document.getElementById('procedimento').value,
-        preco: document.getElementById('preco').value
-    };
-    let procedimentos = JSON.parse(localStorage.getItem('procedimentos')) || [];
-    procedimentos.push(procedimento);
-    localStorage.setItem('procedimentos', JSON.stringify(procedimentos));
-    alert('Procedimento cadastrado com sucesso!');
-    document.getElementById('procedimentoForm').reset();
-    listarProcedimentos();
+        event.preventDefault();
+        const procedimento = {
+            nome: document.getElementById('procedimento').value,
+            preco: document.getElementById('preco').value
+        };
+        let procedimentos = JSON.parse(localStorage.getItem('procedimentos')) || [];
+        procedimentos.push(procedimento);
+        localStorage.setItem('procedimentos', JSON.stringify(procedimentos));
+        alert('Procedimento cadastrado com sucesso!');
+        document.getElementById('procedimentoForm').reset();
+        listarProcedimentos();
     });
 
     function listarProcedimentos() {
@@ -85,12 +85,12 @@
 
             const btnEditar = document.createElement('button');
             btnEditar.textContent = 'Editar';
-            btnEditar.classList.add('editar-btn');
+            btnEditar.classList.add('acoes', 'btn');
             btnEditar.onclick = () => editarProcedimento(index);
 
             const btnRemover = document.createElement('button');
             btnRemover.textContent = 'Remover';
-            btnRemover.classList.add('remover-btn');
+            btnRemover.classList.add('acoes', 'btn');
             btnRemover.onclick = () => removerProcedimento(index);
 
             tdAcoes.appendChild(btnEditar);
@@ -119,10 +119,12 @@
     }
 
     function removerProcedimento(index) {
-        let procedimentos = JSON.parse(localStorage.getItem('procedimentos')) || [];
-        procedimentos.splice(index, 1);
-        localStorage.setItem('procedimentos', JSON.stringify(procedimentos));
-        listarProcedimentos();
+        if (confirm('Tem certeza que deseja remover este procedimento?')) {
+            let procedimentos = JSON.parse(localStorage.getItem('procedimentos')) || [];
+            procedimentos.splice(index, 1);
+            localStorage.setItem('procedimentos', JSON.stringify(procedimentos));
+            listarProcedimentos();
+        }
     }
 
     // Carregar a lista de procedimentos ao carregar a página
