--- a/funcionarios.html
+++ b/funcionarios.html
@@ -12,6 +12,7 @@
     <header>
         <nav>
             <ul>
+                <li><a href="belezaID.html">Home</a></li>
                 <li><a href="procedimentos.html">Ver Procedimentos</a></li>
                 <li><a href="funcionarios.html">Ver Funcionários</a></li>
                 <li><a href="login.html">Entrar</a></li>
