--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
     <header>
         <nav>
             <ul>
+                <li><a href="belezaID.html">Home</a></li>
                 <li><a href="procedimentos.html">Ver Procedimentos</a></li>
                 <li><a href="funcionarios.html">Ver Funcionários</a></li>
                 <li><a href="login.html">Entrar</a></li>
@@ -52,7 +53,7 @@
         if (role === 'admin') {
             window.location.href = 'admin_dashboard.html';
         } else {
-            window.location.href = 'cliente_dashboard.html';
+            window.location.href = 'belezaId.html';
         }
     });
 </script>
