--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="admin_dashboard.html">Home</a></li>
+                <li><a href="admin_dashboard.html">Home ADM</a></li>
                 <li><a href="cadastro_funcionario.html">Cadastro de Funcionários</a></li>
                 <li><a href="cadastro_procedimento.html">Cadastro de Procedimentos</a></li>
                 <li><a href="relatorios.html">Relatórios</a></li>
@@ -65,8 +65,7 @@
         if (agendamentosAmanha.length > 0) {
             avisos.innerHTML = `
             <p>Você tem ${agendamentosAmanha.length} agendamentos para amanhã. Não se esqueça de enviar mensagens de confirmação!</p>
-            <button id="enviarMensagem">Enviar mensagem</button>
-        `;
+            <button id="enviarMensagem">Enviar mensagem</button>`;
 
             document.getElementById('enviarMensagem').addEventListener('click', function () {
                 agendamentosAmanha.forEach(agendamento => {
