--- a/relatorios.html
+++ b/relatorios.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="admin_dashboard.html">Home</a></li>
+                <li><a href="admin_dashboard.html">Home ADM</a></li>
                 <li><a href="cadastro_funcionario.html">Cadastro de Funcionários</a></li>
                 <li><a href="cadastro_procedimento.html">Cadastro de Procedimentos</a></li>
                 <li><a href="relatorios.html">Relatórios</a></li>
