--- a/visualizar_agenda.html
+++ b/visualizar_agenda.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="admin_dashboard.html">Home</a></li>
+                <li><a href="admin_dashboard.html">Home ADM</a></li>
                 <li><a href="cadastro_funcionario.html">Cadastro de Funcionários</a></li>
                 <li><a href="cadastro_procedimento.html">Cadastro de Procedimentos</a></li>
                 <li><a href="relatorios.html">Relatórios</a></li>
@@ -39,7 +39,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- As linhas de agendamentos serão inseridas aqui -->
                 </tbody>
             </table>
         </section>
@@ -69,20 +68,19 @@
                     <td>${agendamento.formaPagamento}</td>
                     <td>${agendamento.deficiencia ? 'Sim' : 'Não'}</td>
                     <td class="acoes">
-                        <button class="btn" data-index="${index}">Confirmar</button>
-                        <button class="btn" data-index="${index}">Remover</button>
+                        <button class="btn confirmar-btn" data-index="${index}">Confirmar</button>
+                        <button class="btn excluir-btn" data-index="${index}">Remover</button>
                     </td>
                 `;
                 tabela.appendChild(row);
             });
 
             document.querySelectorAll('.excluir-btn').forEach(button => {
-                if (confirm('Tem certeza que deseja remover este agendamento?')) {
-                    button.addEventListener('click', function () {
-                        const index = this.getAttribute('data-index');
-                        excluirAgendamento(index);
-                    });
-                }
+                button.addEventListener('click', function () {
+                    const index = this.getAttribute('data-index');
+                    excluirAgendamento(index);
+                });
+
             });
 
             document.querySelectorAll('.confirmar-btn').forEach(button => {
@@ -95,14 +93,16 @@
         }
 
         function excluirAgendamento(index) {
-            agenda.splice(index, 1);
-            localStorage.setItem('agenda', JSON.stringify(agenda));
-            renderizarTabela();
+            if (confirm('Tem certeza que deseja remover este agendamento?')) {
+                agenda.splice(index, 1);
+                localStorage.setItem('agenda', JSON.stringify(agenda));
+                renderizarTabela();
+            }
         }
 
         function confirmarPorWhatsApp(index) {
             const agendamento = agenda[index];
-            const telefone = agendamento.telefone.replace(/\D/g, ''); // Remove caracteres não numéricos
+            const telefone = agendamento.telefone.replace(/\D/g, ''); 
             const mensagem = `Olá ${agendamento.cliente}, estamos confirmando seu agendamento para ${agendamento.data} às ${agendamento.hora}.`;
             const url = `https://api.whatsapp.com/send?phone=${telefone}&text=${encodeURIComponent(mensagem)}`;
             window.open(url, '_blank');
